# ChangeLog for x11-libs/qt-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.32 2009/02/18 19:47:54 jer Exp $

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-core-4.4.2.ebuild:
  Stable for HPPA (bug #248083).

  14 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.0_rc1.ebuild:
  fixing src_prepare. Thanks to Arfrever

  14 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.0_rc1.ebuild:
  Fixing bug #172219. Thanks to Arfrever Frehtes Taifersar Arahesis
  <Arfrever.FTA@GMail.Com>

*qt-core-4.4.2-r2 (14 Feb 2009)

  14 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  +files/0167-fix-group-reading.diff,
  +files/0253-qmake_correct_path_separators.diff,
  +files/0257-qurl-validate-speedup.diff, +qt-core-4.4.2-r2.ebuild:
  revbump with a couple of patches from qt-copy

  14 Feb 2009; Ben de Groot <yngwin@gentoo.org> qt-core-4.5.0_rc1:
  Correct <qt-4.4.0 blocker

  13 Feb 2009; Carsten Lohrke <carlo@gentoo.org> qt-core-4.5.0_rc1.ebuild:
  Correct Qt 4.4 blocker.

  12 Feb 2009; Markos Chandras <hwoarang@gentoo.org> +files/moc.pro,
  +files/rcc.pro, +files/uic.pro, qt-core-4.5.0_rc1.ebuild:
  Add missing files, add bootstrap build target ( see bug #258667 )

  11 Feb 2009; Ben de Groot <yngwin@gentoo.org> ChangeLog:
  Version bump

  06 Feb 2009; Raúl Porcel <armin76@gentoo.org> qt-core-4.4.2.ebuild:
  ia64/sparc stable wrt #248038

  04 Feb 2009; Brent Baude <ranger@gentoo.org> qt-core-4.4.2.ebuild:
  Marking qt-core-4.4.2 ppc64 stable for bug 248038

  04 Feb 2009; Alexey Shvetsov <alexxy@gentoo.org> qt-core-4.4.2.ebuild,
  qt-core-4.4.2-r1.ebuild:
  Add ~mips keywords to qt-4.4.2

  31 Jan 2009; Tobias Klausmann <klausman@gentoo.org> qt-core-4.4.2.ebuild:
  Stable on alpha, bug #248038

*qt-core-4.4.2-r1 (31 Jan 2009)

  31 Jan 2009; Ben de Groot <yngwin@gentoo.org> qt-core-4.4.2.ebuild,
  +qt-core-4.4.2-r1.ebuild: