@@ -12,6 +12,6 @@ DIST qt-x11-opensource-src-4.5.0-rc1.tar.bz2 110889586 RMD160 60b410f1776d5f5586
 EBUILD qt-core-4.4.2-r1.ebuild 5231 RMD160 dc7d28470d1d62c55d2fd8b84c7557d36007d1d7 SHA1 c0962c53d99ebd69c003ea0b767bedda09b2cdc5 SHA256 b6c30ace9166752e74321b3708ca0f4894886839dffde3dd4aac7916e79d6a35
 EBUILD qt-core-4.4.2-r2.ebuild 5480 RMD160 d46beb66c246a1f2a40a7744ec7c2e8ca8a8ce72 SHA1 1e1e31b5827b0c0c10424a1f2926fbfe90f5d5b9 SHA256 8fbb26eb8674e4b5b10765eba7f0eb3b3982e23567dd53a6c81a4ede3c4ea6dc
 EBUILD qt-core-4.4.2.ebuild 5224 RMD160 582802ec58bdcddd254ef13bfcd4ea44f1abcaf2 SHA1 82bc1195c01add910b03cec12043db7aa58e4571 SHA256 6d0ca4c9416f77615f507e516207d756680b288f072ea52b192bc1f181861f65
-EBUILD qt-core-4.5.0_rc1.ebuild 5986 RMD160 969f784cb40875a149d5bf47a4e56f07e66194ad SHA1 af07fcb6769d6a1ac6c31eb2ca946baa8f325588 SHA256 543e4fc0a253e3a2a845adae14ec8977ece87cfe8e99edba9d641ca8d66149e8
-MISC ChangeLog 4657 RMD160 c8959af2dacb5f44eee7c655458b75282de49749 SHA1 c5c8bdccde3191c33b1fb85c3eac0ee157e9b764 SHA256 4f4315cc6ecbe0da4a21b8effabfa1b7dc6e51aa58f54e3bf4b85c1cc7c9c3c0
+EBUILD qt-core-4.5.0_rc1.ebuild 6060 RMD160 2d2e9e755eb580d2f1a99481e0e8807beb689e40 SHA1 cbb4171643bbeea23cd2a02b920e43b0f535d557 SHA256 35aca48dc10c0c2de34d57b2df9ca3feb01d4f40e0c2ea863e933f12c9929d17
+MISC ChangeLog 4765 RMD160 547fff7df433ddcf942c33cebb4ddc396183bf55 SHA1 ebfceda90f75717b261f4e51a8036022a637639f SHA256 59271a9165c898833b6f2cc03cb872e86efa19c8331edbad120e9bc266fa95e0
 MISC metadata.xml 405 RMD160 7ad4cec9a392e8164062dae2935e2c59ba52b503 SHA1 104a2a88f1cf174e9e4827b639a73d79bd0fba2d SHA256 cce5d387ade0a1412bf70c58c7b0ab28fd488cc60e458ac66296ee632d893bf8
