@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qt-core
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.32 2009/02/18 19:47:54 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.33 2009/02/21 19:23:11 hwoarang Exp $
+
+  21 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
+  qt-core-4.5.0_rc1.ebuild:
+  Fixing bug #259736
 
   18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-core-4.4.2.ebuild:
   Stable for HPPA (bug #248083).
